# tradingdev

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  claude.md  mypy.ini  pyproject.toml  ruff.toml
configs/: glft_ml_strategy.yaml  glft_strategy.yaml  kd_strategy.yaml  kd_strategy_walkforward.yaml  quantile_strategy.yaml  safety_volume_strategy.yaml  xgboost_strategy.yaml
docs/: run_artifacts.md  strategy_contract.md
docs/strategies/: README.md  glft_ml_strategy.md  glft_strategy.md  kd_strategy.md  quantile_strategy.md  safety_volume_strategy.md  xgboost_strategy.md
mcp_server/: __init__.py  backtest_worker.py  job_store.py  optimization_worker.py  server.py
scripts/: git-flow-commit.sh  mae_analysis.py  rebuild-env.sh
scripts/hooks/: finalize-markdown.sh  finalize-python.sh  pre-commit
src/btc_strategy/: __init__.py  __main__.py  main.py
src/btc_strategy/backtest/: base_engine.py  engine.py  metrics.py  pipeline_result.py  report.py  result.py  signal_engine.py  volume_engine.py
src/btc_strategy/crawlers/: binance_api.py  binance_vision.py  deribit_dvol.py
src/btc_strategy/dashboard/: analysis.py  app.py
src/btc_strategy/data/: loader.py  processor.py  schemas.py
src/btc_strategy/indicators/: kd.py
src/btc_strategy/ml/: autogluon_model.py  base.py  direction_features.py  features.py  risk_features.py  technical_features.py  xgboost_model.py
src/btc_strategy/strategies/: base.py  glft_ml_strategy.py  glft_strategy.py  kd_strategy.py  registry.py  rolling_retrainer.py  safety_volume_strategy.py  threshold_optimizer.py  xgboost_strategy.py
src/btc_strategy/utils/: cache.py  logger.py  parallel.py
src/btc_strategy/validation/: report.py  splitter.py  walk_forward.py
src/quant_backtest/: __init__.py  __main__.py  main.py
src/quant_backtest/backtest/: base_engine.py  metrics.py  pipeline_result.py  report.py  result.py  signal_engine.py  volume_engine.py
src/quant_backtest/crawlers/: base.py  binance_api.py  binance_derivatives.py  binance_vision.py  deribit_dvol.py
src/quant_backtest/dashboard/: analysis.py  app.py
src/quant_backtest/data/: data_manager.py  loader.py  processor.py  schemas.py
src/quant_backtest/indicators/: base.py  kd.py
src/quant_backtest/ml/: autogluon_model.py  direction_features.py  features.py  quantile_features.py  risk_features.py  thesis_validator.py  (+2 more)
src/tradingdev/: __init__.py  __main__.py  main.py
strategies/: glft_ml_strategy.py  glft_strategy.py  kd_strategy.py  quantile_strategy.py  registry.py  rolling_retrainer.py  safety_volume_strategy.py  threshold_optimizer.py  xgboost_strategy.py
tests/: conftest.py
tests/adapters/: test_cli.py  test_storage.py
tests/app/: test_backtest_service.py  test_data_service.py  test_job_service.py  test_optimization_service.py  test_run_artifact_services.py  test_strategy_service.py
tests/integration/: test_import_migration.py  test_mcp_workflow.py
tests/mcp/: test_feature_requests_tool.py  test_mcp_schemas.py  test_tool_boundaries.py
tests/test_backtest/: test_engine.py  test_pipeline_result.py
tests/test_crawlers/: test_binance_api.py  test_deribit_dvol.py
tests/test_data/: test_data_manager.py  test_loader.py  test_processor.py  test_schemas.py
tests/test_indicators/: test_kd.py
tests/test_ml/: test_features.py  test_xgboost_model.py
tests/test_strategies/: test_glft_strategy.py  test_kd_strategy.py  test_safety_volume_strategy.py  test_xgboost_strategy.py
tests/test_utils/: test_cache.py  test_parallel.py
tests/test_validation/: test_walk_forward.py
(+160 files in other folders)
