[project]
name = "btc-usdt-strategy"
version = "0.1.0"
description = "BTC/USDT perpetual futures contract backtesting strategies"
requires-python = ">=3.12,<3.14"
dependencies = [
    "vectorbt>=0.28.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pandas-ta>=0.3.14b1",
    "pydantic>=2.0",
    "ccxt>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "psutil>=5.9",
    "autogluon-tabular[all]>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btc_strategy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20250915",
]
