[project]
name = "tradingdev"
version = "0.1.0"
description = "MCP-first quantitative strategy development server"
requires-python = ">=3.12,<3.14"
dependencies = [
    "vectorbt>=0.28.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pandas-ta>=0.3.14b1",
    "pydantic>=2.0",
    "ccxt>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    # Architecture decision: dashboard and heavy ML packages stay in runtime
    # dependencies because MCP and CLI paths can inspect and execute bundled ML
    # strategies without installing extras. If server footprint becomes a
    # deployment blocker, split these into `tradingdev[dashboard]` and
    # `tradingdev[ml]` extras and re-check MCP tool behavior before release.
    "xgboost>=2.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "psutil>=5.9",
    "autogluon-tabular[all]>=1.5.0",
    "mcp[cli]>=1.0",
]

[project.scripts]
tradingdev = "tradingdev.adapters.cli.main:main"
tradingdev-mcp = "tradingdev.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingdev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Dev tools: [dependency-groups].dev is the canonical uv-native source.
# No [project.optional-dependencies].dev is maintained to avoid duplication.
[dependency-groups]
dev = [
    "black>=25.0",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    # Provides the `pymarkdown` CLI used by scripts/hooks/finalize-markdown.sh.
    "pymarkdownlnt>=0.9.31",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20250915",
]
